PROTON-1243: Stop pn_reactor_stop from causing an infinite loop when called from within callback